--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ font-size: 24px;
 .escola-div-conteudo{
     width: 35%;
 }
+
 .escola-titulo{
     padding: 24px 0;
+}
+
+.estudante-imagem{
+    width: 120px;
 }
