--- a/style.css
+++ b/style.css
@@ -46,3 +46,16 @@ font-size: 24px;
 .estudante-imagem{
     width: 120px;
 }
+
+.estudante-icone{
+    width: 24px;
+}
+
+.estudante-div{
+    text-align: center;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
